Fix: spacing issues and mobile break point for nav title

--- a/src/stylesheets/base/_layout.scss
+++ b/src/stylesheets/base/_layout.scss
@@ -3,8 +3,8 @@
 .container {
     padding-left: 10%;
     padding-right: 10%;
-    padding-top: $space-xl;
-    padding-bottom: $space-xl;
+    padding-top: $space-l;
+    padding-bottom: $space-l;
  }
  
  .center {
@@ -25,8 +25,7 @@
  }
 
  .text-box-main {
-    @extend .text-container;
-    margin-left: $space-m;
+    padding: $space-default;
  }
 
  .split-column {
@@ -61,7 +60,7 @@
  }
 
  .mobile-only {
-    @include media-above($break-small) {
+    @include media-above($break-medium) {
        display: none;
     }
  }
@@ -100,16 +99,16 @@
  
  /* Calendar icons */
  .calendar-stack {
-     position: relative;
-     display: inline-block;
-     width: (13em / 14);
-     height: 1em;
+    position: relative;
+    display: inline-block;
+    width: (13em / 14);
+    height: 1em;
     margin: $space-m;
  }
  
  .fa-calendar-o,
  .calendar-day {
-     position: absolute;
+    position: absolute;
  }
  
  .calendar-day {
